video source & player loading animation  visibility fixes

--- a/src/pages/Player.module.css
+++ b/src/pages/Player.module.css
@@ -438,6 +438,7 @@ body.light .watchlistBtn {
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
 }
 
 .sourceSelector {
@@ -1123,4 +1124,5 @@ body.light .sourceButton, body.light .qualityButton {
     width: 100%;
     height: 100%;
     border: none;
+    z-index: 1;
 }
